--- a/static/styles.css
+++ b/static/styles.css
@@ -71,13 +71,22 @@ body {
     height: 50px;
 }
 
+.completed-box {
+    position: absolute;
+    z-index: 1;
+    width: 40px;
+    height: 40px;
+    border-radius: 4px;
+}
+
 button {
     background-color: #444;
     color: #fff;
     border: 1px solid #ccc;
-    padding: 5px 10px;
+    padding: 10px 20px;
     margin-top: 20px;
     cursor: pointer;
+    font-size: 16px;
 }
 
 button:hover {
