--- a/templates/game.html
+++ b/templates/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dots and Boxes</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.3.1/dist/confetti.browser.min.js"></script>
     <script>
         var gridWidth = {{ grid_width }};
         var gridHeight = {{ grid_height }};
