--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dots and Boxes - Setup</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='index_styles.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <script src="{{ url_for('static', filename='index.js') }}" defer></script>
 </head>
 <body>
